After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675289 - memory: fix default_mem_map() function signature
memory: fix default_mem_map() function signature
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal minor
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-02 11:13 UTC by sreerenj
Modified: 2012-05-04 08:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
parameter missing in default_mem_map implementaion. (726 bytes, patch)
2012-05-02 11:13 UTC, sreerenj
committed Details | Review

Description sreerenj 2012-05-02 11:13:54 UTC
Created attachment 213264 [details] [review]
parameter missing in default_mem_map implementaion.

maxsize argument is missing in _default_memory_map() definition.
Comment 1 Tim-Philipp Müller 2012-05-04 08:29:56 UTC
commit 86e0f4d14561b1ef367406561215dfb64f6d367d
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Wed May 2 14:00:43 2012 +0300

    memory: add missing parameter to default_mem_map()
    
    Fixes function signature for correctness.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=675289