memory: add missing parameter to default_mem_map()

Fixes function signature for correctness.

https://bugzilla.gnome.org/show_bug.cgi?id=675289